--- a/app/src/main/res/layout/item_profile_calendar.xml
+++ b/app/src/main/res/layout/item_profile_calendar.xml
@@ -32,7 +32,10 @@
         <TextView
             android:fontFamily="sans-serif-light"
             android:id="@+id/profile_calendar_item_name_event"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:textAllCaps="true"
@@ -52,7 +55,10 @@
             android:textSize="12sp"
             app:layout_constraintTop_toBottomOf="@id/profile_calendar_item_name_event"
             app:layout_constraintStart_toEndOf="@id/profile_calendar_item_pic_event_imageview"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toEndOf="parent"
             android:layout_height="wrap_content"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
