--- a/app/src/main/res/layout/item_profile_timenote_list_style.xml
+++ b/app/src/main/res/layout/item_profile_timenote_list_style.xml
@@ -52,6 +52,9 @@
             android:layout_height="wrap_content"/>
 
         <TextView
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toStartOf="@id/profile_item_options"
             android:fontFamily="sans-serif-light"
             android:id="@+id/profile_item_address_event"
             android:layout_marginStart="8dp"
@@ -60,7 +63,7 @@
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/profile_item_name_event"
             app:layout_constraintStart_toEndOf="@id/item_card"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
         <ImageView
