--- a/app/src/main/res/layout/item_timenote.xml
+++ b/app/src/main/res/layout/item_timenote.xml
@@ -30,7 +30,10 @@
 
     <TextView
         android:id="@+id/timenote_place"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:maxLines="1"
+        android:ellipsize="end"
+        app:layout_constraintEnd_toStartOf="@id/timenote_options"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="sans-serif-light"
