--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -25,6 +25,14 @@
                 style="@style/AppTheme.Toolbar.TextLeft"
                 android:text="@string/next" />
 
+            <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/done_pb"
+                android:layout_marginEnd="16dp"
+                android:layout_gravity="end"
+                android:layout_width="24dp"
+                android:layout_height="24dp" />
+
             <TextView
                 android:paddingVertical="8dp"
                 android:paddingEnd="8dp"
