--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -306,23 +306,39 @@
                         app:layout_constraintStart_toEndOf="@id/profile_accept_btn"
                         app:layout_constraintTop_toBottomOf="@id/profile_pic_imageview" />
 
+                    <TextView
+                        android:layout_marginHorizontal="16dp"
+                        android:maxLines="1"
+                        android:ellipsize="end"
+                        android:fontFamily="sans-serif-light"
+                        android:textColor="@color/colorText"
+                        android:layout_marginTop="8dp"
+                        tools:text="Zaffran Samuel"
+                        android:textSize="15sp"
+                        android:gravity="center"
+                        android:id="@+id/profile_name"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/profile_modify_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
 
                     <TextView
-                        android:maxLines="2"
+                        android:maxLines="3"
                         android:ellipsize="end"
                         android:gravity="center"
                         android:id="@+id/profile_desc"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:fontFamily="sans-serif-light"
                         android:textColor="@color/colorText"
                         android:layout_marginHorizontal="16dp"
                         android:textSize="15sp"
-                        tools:text="Hello this is a very long description and i need to fix it so it won't be bullshit lets see what we can do if we type a very very long desc"
+                        tools:text="Hello this is a very long description and i need to fix it so it won't be bullshit lets see what we can do if we type a very very long desc and it can goes longer"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/profile_modify_btn" />
+                        app:layout_constraintTop_toBottomOf="@id/profile_name" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/past_future"
