--- a/app/src/main/res/layout/item_profile_calendar.xml
+++ b/app/src/main/res/layout/item_profile_calendar.xml
@@ -19,14 +19,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <com.google.android.material.card.MaterialCardView
+            app:cardElevation="0dp"
+            app:cardCornerRadius="90dp"
+            android:id="@+id/profile_calendar_cv"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
         <ImageView
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:id="@+id/profile_calendar_item_pic_event_imageview"
-                android:scaleType="centerCrop"/>
+            android:background="@color/colorAccent"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:id="@+id/profile_calendar_item_pic_event_imageview"
+            android:scaleType="centerCrop"/>
+
+        </com.google.android.material.card.MaterialCardView>
 
 
         <TextView
@@ -42,7 +52,7 @@
             android:textColor="@color/colorText"
             android:textSize="14sp"
             android:textStyle="normal"
-            app:layout_constraintStart_toEndOf="@+id/profile_calendar_item_pic_event_imageview"
+            app:layout_constraintStart_toEndOf="@+id/profile_calendar_cv"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="beach Volley" />
 
@@ -54,7 +64,7 @@
             android:textColor="@color/colorText"
             android:textSize="12sp"
             app:layout_constraintTop_toBottomOf="@id/profile_calendar_item_name_event"
-            app:layout_constraintStart_toEndOf="@id/profile_calendar_item_pic_event_imageview"
+            app:layout_constraintStart_toEndOf="@id/profile_calendar_cv"
             android:layout_width="0dp"
             android:maxLines="1"
             android:ellipsize="end"
