--- a/app/src/main/res/layout-sw480dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw480dp/item_timenote_root.xml
@@ -140,21 +140,54 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/timenote_buy"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorYellow"
-        android:fontFamily="sans-serif-light"
-        android:gravity="end"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:visibility="gone"
-        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="4dp"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+        android:id="@+id/timenote_buy_cl"
+        android:background="@color/colorBackground"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_vp" />
+        app:layout_constraintTop_toBottomOf="@id/timenote_vp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:id="@+id/timenote_buy"
+            android:visibility="visible"
+            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/more_label"
+            android:text="Find out more"
+            android:textSize="14sp"
+            android:textColor="@color/colorAccent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/more_label"
+            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
         android:id="@+id/timenote_comment"
@@ -164,7 +197,7 @@
         android:layout_marginTop="12dp"
         android:src="@drawable/ic_commentaires"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_buy" />
+        app:layout_constraintTop_toBottomOf="@id/timenote_buy_cl" />
 
     <ImageView
         android:id="@+id/timenote_share"
@@ -202,38 +235,72 @@
         android:id="@+id/timenote_fl"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
+        android:layout_marginStart="12dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="@id/timenote_plus"
-        app:layout_constraintStart_toStartOf="@id/timenote_comment"
         app:layout_constraintTop_toBottomOf="@id/timenote_comment">
 
-        <ImageView
-            android:id="@+id/timenote_pic_participant_one"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <RelativeLayout
+            android:id="@+id/timenote_pic_participant_one_rl"
             android:layout_marginEnd="-8dp"
-            android:src="@drawable/beach" />
+            android:background="@drawable/border_iv"
+            android:layout_gravity="center"
+            android:layout_width="28dp"
+            android:layout_height="28dp">
 
-        <ImageView
-            android:id="@+id/timenote_pic_participant_two"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            <ImageView
+                android:layout_centerInParent="true"
+                android:id="@+id/timenote_pic_participant_one"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/beach" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/timenote_pic_participant_two_rl"
             android:layout_marginEnd="-8dp"
-            android:src="@drawable/beach" />
+            android:background="@drawable/border_iv"
+            android:layout_gravity="center"
+            android:layout_width="28dp"
+            android:layout_height="28dp">
 
-        <ImageView
-            android:id="@+id/timenote_pic_participant_three"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:src="@drawable/beach" />
+            <ImageView
+                android:layout_centerInParent="true"
+                android:id="@+id/timenote_pic_participant_two"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/beach" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/timenote_pic_participant_three_rl"
+            android:background="@drawable/border_iv"
+            android:layout_gravity="center"
+            android:layout_width="28dp"
+            android:layout_height="28dp">
+
+            <ImageView
+                android:layout_centerInParent="true"
+                android:id="@+id/timenote_pic_participant_three"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/beach" />
+
+        </RelativeLayout>
+
 
         <TextView
+            android:layout_marginStart="4dp"
             android:layout_gravity="center"
             android:id="@+id/timenote_added_by"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            tools:text="Joined by Jordan Dahan and Thousands of "
             android:textColor="@color/colorText"
             android:textSize="13sp" />
 
@@ -256,13 +323,15 @@
         tools:text="#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party#Beach#Sunset#Love#Summer#Dance#Party" />
 
     <TextView
-        android:id="@+id/timenote_see_more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/see_more"
-        android:textColor="@color/colorText"
+        android:id="@+id/timenote_comment_account"
+        android:textColor="@android:color/darker_gray"
+        android:text="See the 12 comments"
         android:textSize="13sp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc"
         app:layout_constraintStart_toStartOf="@id/timenote_comment"
-        app:layout_constraintTop_toBottomOf="@id/timenote_username_desc" />
+        app:layout_constraintEnd_toEndOf="@id/timenote_plus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
