--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -162,6 +162,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
+        android:visibility="gone"
         android:id="@+id/menu_profile_cv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -212,7 +213,7 @@
         android:layout_marginTop="12dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintStart_toEndOf="@id/menu_profile_cv"
-        app:layout_constraintEnd_toEndOf="@id/menu_invite_friends_cv"
+        app:layout_constraintEnd_toEndOf="@id/menu_settings_cv"
         app:layout_constraintTop_toBottomOf="@id/menu_invite_friends_cv">
 
         <androidx.constraintlayout.widget.ConstraintLayout
