--- a/app/src/main/res/layout/fragment_preview_timenote_created.xml
+++ b/app/src/main/res/layout/fragment_preview_timenote_created.xml
@@ -145,21 +145,55 @@
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
         app:layout_constraintStart_toEndOf="@id/separator_2"
         app:layout_constraintTop_toTopOf="@id/separator_2" />
-    <TextView
-        android:id="@+id/preview_created_timenote_buy"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorYellow"
-        android:fontFamily="sans-serif-light"
-        android:gravity="end"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="4dp"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        tools:text="12$"
-        android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="gone"
+        android:id="@+id/preview_timenote_buy_cl"
+        android:background="@color/colorBackground"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_vp" />
+        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_vp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:id="@+id/preview_created_timenote_buy"
+            android:visibility="visible"
+            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_white_24"
+            android:paddingHorizontal="8dp"
+            android:paddingVertical="4dp"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/more_label"
+            android:text="Find out more"
+            android:textSize="14sp"
+            android:textColor="@color/colorAccent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            app:layout_constraintTop_toBottomOf="@id/more_label"
+            android:layout_marginTop="8dp"
+            android:layout_marginHorizontal="16dp"
+            android:background="@android:color/darker_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <me.relex.circleindicator.CircleIndicator3
         android:id="@+id/preview_created_timenote_indicator"
@@ -170,7 +204,7 @@
         app:ci_drawable_unselected="@drawable/dot_unselected"
         app:layout_constraintStart_toEndOf="@id/separator_1"
         app:layout_constraintEnd_toStartOf="@id/separator_2"
-        app:layout_constraintTop_toBottomOf="@id/preview_created_timenote_buy" />
+        app:layout_constraintTop_toBottomOf="@id/preview_timenote_buy_cl" />
 
     <TextView
         android:id="@+id/preview_created_timenote_place"
