--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -162,6 +162,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:visibility="gone"
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/push_label"
                 android:textColor="@color/colorText"
@@ -175,6 +176,7 @@
                 android:layout_height="wrap_content"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="gone"
                 android:layout_marginTop="8dp"
                 android:id="@+id/push_notification_cl"
                 android:background="@color/colorElevated"
@@ -207,12 +209,14 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/card_line_3"
                 app:layout_constraintTop_toBottomOf="@id/push_notification_cl"
                 style="@style/AppTheme.Divider.Toolbar"
                 tools:ignore="MissingConstraints" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:visibility="gone"
                 android:id="@+id/push_notification_certified_cl"
                 android:background="@color/colorElevated"
                 android:padding="16dp"
