--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -173,6 +173,9 @@
         <argument
             android:name="id"
             app:argType="string" />
+        <argument
+            android:name="isNotMine"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:name="com.timenoteco.timenote.view.profileFlow.menuDirectory.Menu"
