--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -23,7 +23,7 @@
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/create_timenote_next_btn"
                 style="@style/AppTheme.Toolbar.TextLeft"
-                android:text="@string/next" />
+                android:text="@string/create" />
 
             <ProgressBar
                 android:visibility="gone"
@@ -162,7 +162,7 @@
                 android:layout_marginStart="48dp"
                 android:layout_marginTop="16dp"
                 fancy:fb_defaultColor="@android:color/holo_orange_dark"
-                fancy:fb_radius="5dp"
+                fancy:fb_radius="25dp"
                 fancy:fb_text=""
                 fancy:fb_textColor="@android:color/white"
                 android:gravity="center"
@@ -176,7 +176,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 android:layout_marginTop="16dp"
                 fancy:fb_defaultColor="@android:color/holo_red_dark"
-                fancy:fb_radius="5dp"
+                fancy:fb_radius="25dp"
                 fancy:fb_text=""
                 fancy:fb_textColor="@android:color/white"
                 android:gravity="center"
@@ -190,7 +190,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 android:layout_marginTop="16dp"
                 fancy:fb_defaultColor="@android:color/holo_blue_dark"
-                fancy:fb_radius="5dp"
+                fancy:fb_radius="25dp"
                 fancy:fb_text=""
                 fancy:fb_textColor="@android:color/white"
                 android:gravity="center"
@@ -204,7 +204,7 @@
             <mehdi.sakout.fancybuttons.FancyButton
                 android:layout_marginTop="16dp"
                 fancy:fb_defaultColor="@android:color/holo_purple"
-                fancy:fb_radius="5dp"
+                fancy:fb_radius="25dp"
                 fancy:fb_text=""
                 fancy:fb_textColor="@android:color/white"
                 android:gravity="center"
@@ -219,7 +219,7 @@
                 android:layout_marginEnd="48dp"
                 android:layout_marginTop="16dp"
                 fancy:fb_defaultColor="@color/colorText"
-                fancy:fb_radius="5dp"
+                fancy:fb_radius="25dp"
                 fancy:fb_text="+"
                 fancy:fb_textSize="24dp"
                 fancy:fb_textColor="@color/colorBackground"
@@ -278,7 +278,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:id="@+id/desc_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -351,6 +351,7 @@
                         android:layout_marginTop="8dp"
                         android:text="@string/add_end_date"
                         android:textSize="14sp"
+                        android:paddingTop="8dp"
                         android:textColor="@android:color/darker_gray"
                         app:layout_constraintTop_toBottomOf="@id/when_label"
                         app:layout_constraintStart_toStartOf="@id/when_label"
@@ -495,9 +496,9 @@
                         android:id="@+id/create_timenote_share_with_btn"
                         android:drawablePadding="8dp"
                         android:drawableStart="@drawable/ic_new_timenote_share_with"
-                        android:textColor="@android:color/darker_gray"
+                        android:textColor="@color/colorText"
                         android:textSize="14sp"
-                        android:hint="@string/visibility"
+                        android:text="@string/visibility"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_width="wrap_content"
@@ -507,7 +508,7 @@
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_share_with"
                         android:drawablePadding="8dp"
-                        android:textColor="@android:color/darker_gray"
+                        android:textColor="@color/colorText"
                         android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -549,11 +550,55 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:text="None"
+                        tools:text="Esport"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_category"
                         android:drawablePadding="8dp"
+                        android:textColor="@color/colorText"
+                        android:textSize="14sp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <com.google.android.material.card.MaterialCardView
+                android:visibility="gone"
+                android:id="@+id/sub_category_cardview"
+                app:cardElevation="5dp"
+                app:cardCornerRadius="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toBottomOf="@id/category_cardview"
+                android:layout_marginHorizontal="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:padding="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/create_timenote_sub_category_label"
                         android:textColor="@android:color/darker_gray"
+                        android:textSize="14sp"
+                        android:text="@string/subcategory"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:fontFamily="sans-serif-light"
+                        android:id="@+id/create_timenote_sub_category"
+                        android:drawablePadding="8dp"
+                        android:textColor="@color/colorText"
                         android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -572,7 +617,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="12dp"
-                app:layout_constraintTop_toBottomOf="@id/category_cardview"
+                app:layout_constraintTop_toBottomOf="@id/sub_category_cardview"
                 android:layout_marginHorizontal="24dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -596,10 +641,10 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:text="No answer"
+                        tools:text="No answer"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_paid_timenote_status_no_answer"
-                        android:textColor="@android:color/darker_gray"
+                        android:textColor="@color/colorText"
                         android:textSize="14sp"
                         app:layout_constraintTop_toTopOf="@id/create_timenote_paid_timenote_label"
                         app:layout_constraintBottom_toBottomOf="@id/create_timenote_paid_timenote_label"
@@ -685,6 +730,20 @@
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </com.google.android.material.card.MaterialCardView>
+
+            <TextView
+                android:id="@+id/create_timenote_clear"
+                android:textAllCaps="true"
+                android:layout_marginBottom="12dp"
+                android:text="@string/clear_all_fields"
+                android:textSize="12sp"
+                android:textColor="@android:color/darker_gray"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/organizers_cv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
