--- a/app/src/main/res/navigation/navigation_graph_tab_home.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_home.xml
@@ -200,6 +200,9 @@
         <argument
             android:name="id"
             app:argType="string" />
+        <argument
+            android:name="isNotMine"
+            app:argType="boolean" />
     </fragment>
     <fragment
         android:id="@+id/profileCalendar"
