--- a/app/src/main/res/navigation/navigation_graph_tab_search.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_search.xml
@@ -165,6 +165,12 @@
         <argument
             android:name="id"
             app:argType="string" />
+        <argument
+            android:name="isNotMine"
+            app:argType="boolean" />
+        <action
+            android:id="@+id/action_followPageSearch_to_profileSearch"
+            app:destination="@id/profileSearch" />
     </fragment>
     <fragment
         android:id="@+id/previewTimenoteCreatedSearch"
