--- a/app/src/main/res/layout-sw360dp/fragment_preview_timenote_created.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_preview_timenote_created.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     tools:context=".view.createTimenoteFlow.PreviewTimenoteCreated">
 
     <LinearLayout
         android:id="@+id/preview_created_timenote_ll"
-        style="@style/AppTheme.Toolbar.LinearLayout">
+        style="@style/AppTheme.Toolbar.LinearLayout"
+        tools:ignore="MissingConstraints">
 
         <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
@@ -225,7 +226,7 @@
         android:textColor="@color/colorText"
         android:text="@string/share_to"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/colorYellow"
+        android:backgroundTint="@color/colorBackground"
         android:drawableLeft="@drawable/ic_partage_sans_fleche_preview"
         android:drawablePadding="-16dp"
         android:paddingVertical="6dp"
