--- a/app/src/main/res/navigation/navigation_graph_tab_search.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_search.xml
@@ -191,6 +191,9 @@
         <argument
             android:name="id"
             app:argType="string" />
+        <action
+            android:id="@+id/action_profileCalendarSearch_to_detailedTimenoteSearch"
+            app:destination="@id/detailedTimenoteSearch" />
     </fragment>
     <fragment
         android:id="@+id/createTimenoteSearch"
